--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -337,7 +337,7 @@ a {
 .header-fixed {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .hero {
@@ -834,19 +834,24 @@ a {
   width: 560px;
   align-self: flex-end;
 }
-.project__link {
+.project__action {
   margin-top: 13px;
-  display: inline-flex;
+  display: flex;
   align-items: center;
-  column-gap: 28px;
+  column-gap: 22px;
+}
+.project__action:hover {
+  cursor: pointer;
+}
+.project__action:hover .project__link {
+  text-decoration: underline;
+}
+.project__link {
   color: #fff;
   font-family: "Public Sans", san-serif;
   font-size: 1.8rem;
   font-weight: 500;
   line-height: 1.56;
-}
-.project__link:hover {
-  text-decoration: underline;
 }
 .project__heading {
   flex-shrink: 0;
@@ -890,12 +895,13 @@ a {
 }
 .project-decor-1, .project-decor-2 {
   position: absolute;
+  user-select: none;
 }
 .project-decor-1 {
   rotate: -88deg;
   transform: rotateX(180deg);
   top: 23px;
-  right: -69px;
+  right: -88px;
 }
 .project-decor-2 {
   top: 103px;
@@ -913,7 +919,7 @@ a {
   text-align: center;
 }
 .feature__desc {
-  margin-top: 20px;
+  margin-top: 36px;
 }
 .feature-list {
   margin-top: 103px;
@@ -1097,9 +1103,10 @@ a {
   background: transparent;
   border-radius: 50%;
   border: 1px solid #265252;
+  transition: 0.25s ease-in-out;
 }
 .footer .social-item:hover {
-  border: none;
+  border-color: #a75325;
   background-color: #a75325;
   cursor: pointer;
 }
